--- a/PharmacyProject/appsettings.json
+++ b/PharmacyProject/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=postgres;Username=postgres;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
